# gh-repo-organizer

./: .env.example  .gitignore  CLAUDE.md  CODEX.md  INSTALLATION.md  README.md  ROADMAP.md  errors.txt  pyproject.toml  repo_analyzer.py  requirements.txt  test_setup.py
.cursor/: mcp.json
docs/: CLAUDE.ARCHIVED.md  README.md  auth_configuration.md  roadmap.md  roadmap.txt  task-master-cli-help.md
docs/adr/: 0001-ddd-architecture.md  0002-repository-action-decisions.md  README.md
docs/guides/: accessing_private_repos.md  auth_configuration.md  claude-code.md  cli-migration.md  ddd-architecture.md  development.md  poetry.md  rules.md  test-scripts.md
scripts/: __init__.py  analyze_repo.py  e2e.sh  fetch_all_repos.py  prd.txt  task-complexity-report.json
src/repo_organizer/: __init__.py  cli.py
src/repo_organizer/app/: __init__.py  application_factory.py  application_runner.py
src/repo_organizer/application/: __init__.py  analyze_repositories.py
src/repo_organizer/bootstrap/: __init__.py  application_factory.py  application_runner.py
src/repo_organizer/cli/: __init__.py  app.py  auth_middleware.py  commands.py  dev.py
src/repo_organizer/cli/commands/: __init__.py  actions.py  actions_executor.py  logs.py  repo.py  reports.py
src/repo_organizer/config/: __init__.py  settings.py
src/repo_organizer/domain/analysis/: __init__.py  action_recommendation_service.py  events.py  models.py  protocols.py  repository_analyzer_service.py  services.py  value_objects.py
src/repo_organizer/domain/core/: auth_config.py  auth_service.py  auth_validator.py  events.py
src/repo_organizer/domain/source_control/: __init__.py  models.py  protocols.py
src/repo_organizer/infrastructure/: __init__.py  github_rest.py  langchain_claude.py
src/repo_organizer/infrastructure/analysis/: __init__.py  langchain_claude_adapter.py  llm_service.py  pydantic_models.py
src/repo_organizer/infrastructure/config/: __init__.py  auth_settings.py  settings.py
src/repo_organizer/infrastructure/errors/: __init__.py  error_handler.py  exceptions.py
src/repo_organizer/infrastructure/logging/: __init__.py  auth_logger.py  logger.py
src/repo_organizer/infrastructure/rate_limiting/: __init__.py  rate_limiter.py  retry.py
src/repo_organizer/infrastructure/source_control/: __init__.py  github_adapter.py  github_service.py
src/repo_organizer/interface/cli/: __init__.py  commands.py
src/repo_organizer/models/: __init__.py  repo_models.py
src/repo_organizer/services/: __init__.py  github_service.py  llm_service.py  progress_reporter.py  repository_analyzer_service.py  service_interfaces.py
src/repo_organizer/shared/: __init__.py
src/repo_organizer/utils/: __init__.py  exceptions.py  logger.py  rate_limiter.py
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  tasks.json
tests/: __init__.py  conftest.py  debug_langchain_claude_adapter.py  test_analysis.py  test_application.py
tests/application/: test_single_repo_mode.py
tests/cli/: __init__.py  test_app.py  test_auth_middleware.py  test_commands.py  test_execute_actions.py
tests/domain/analysis/: __init__.py  test_action_recommendation_service.py  test_events.py
tests/domain/core/: __init__.py  test_auth_config.py  test_auth_service.py  test_auth_validator.py  test_events.py
tests/fixtures/: expected_analysis_output.md  langchain_claude_adapter_fix.md  sample_repo_data.json
tests/infrastructure/analysis/: test_langchain_claude_adapter.py
tests/infrastructure/config/: __init__.py  test_auth_settings.py
tests/infrastructure/source_control/: __init__.py  test_github_adapter.py
tests/scripts/: test_analyze_repo.py
